# albert-plugin-widgetsboxmodel-qss

./: CMakeLists.txt  README.md  metadata.json
i18n/: widgetsboxmodel_de.ts  widgetsboxmodel_en.ts
src/: inputline.cpp  inputline.h  itemdelegate.cpp  plugin.h  resultitemmodel.cpp  settingsbutton.cpp  themesqueryhandler.cpp  window.cpp  window.h
